--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,50 @@
 /* You can add global styles to this file, and also import other style files */
+@import "swiper/css/bundle";
+
+@import "text-size";
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+html,
+body {
+  font-family: "Roboto", sans-serif;
+  height: 100%;
+  line-height: 1.5;
+}
+
+body {
+  font-size: $text-small;
+}
+
+button,
+input {
+  outline: none;
+  border: none;
+  background-color: transparent;
+}
+
+a {
+  text-decoration: none;
+  color: unset;
+}
+
+ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 0;
 }
