--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,78 @@
-<p>
-  header works!
-</p>
+<header class="header">
+  <div class="header-top py-3">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-3 col-md-4 col-5">
+          <div class="logo-area">
+            <img
+              src="https://www.watchstore.vn/upload/image/logo-watchstore.webp"
+              alt="logo"
+              class="w-100" />
+          </div>
+        </div>
+
+        <div class="col-lg-6">
+          <div class="search-box-wrapper position-relative d-flex">
+            <input
+              type="text"
+              placeholder="Tìm kiếm..."
+              class="w-100 px-3 bg-white" />
+            <div class="search-btn">
+              <button
+                class="bg-primary-color color-white position-absolute d-flex align-items-center justify-content-center">
+                <span class="material-symbols-outlined"> search </span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="d-flex justify-content-end">
+            <div class="user-wrapper pe-2 me-3">
+              <a href="">
+                <span class="material-symbols-outlined"> person </span></a
+              >
+            </div>
+            <div class="user-wrapper pe-2 me-3 position-relative">
+              <div class="card-total">2</div>
+              <a href="">
+                <span class="material-symbols-outlined"> favorite </span></a
+              >
+            </div>
+            <div class="user-wrapper pe-2 me-3 position-relative">
+              <div class="card-total">2</div>
+              <a href="">
+                <span class="material-symbols-outlined">
+                  shopping_cart
+                </span></a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="header-bottom">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-12 d-none d-lg-block">
+          <nav class="main-navigation text-center">
+            <ul>
+              <li><a href="">Trang chủ</a></li>
+              <li>
+                <a href="">
+                  Danh mục
+                  <span class="material-symbols-outlined"> expand_more </span>
+                </a>
+              </li>
+              <li><a href="">Nam</a></li>
+              <li><a href="">Nữ</a></li>
+              <li><a href="">Luxury</a></li>
+              <li><a href="">Giới thiệu</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
