--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,120 @@
-<p>
-  home works!
-</p>
+<div class="home-wrapper">
+  <app-header-swiper-slide></app-header-swiper-slide>
+
+  <!-- CATEGORY BANNER AREA  -->
+  <div class="category-area mt-4 overflow-hidden px-3">
+    <div class="row">
+      <div class="col-lg-4 col-md-4">
+        <div class="position-relative">
+          <img
+            src="http://lenos.mbkip3ms9u-e92498n216kr.p.temp-site.link/wp-content/uploads/2022/03/IMG.png"
+            alt=""
+            class="w-100 object-fit-cover"
+            height="420" />
+          <p class="position-absolute text-center color-white">Đồng Hồ Nữ</p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-4">
+        <div class="position-relative">
+          <img
+            src="http://lenos.mbkip3ms9u-e92498n216kr.p.temp-site.link/wp-content/uploads/2022/03/IMG1.png"
+            alt=""
+            class="w-100 object-fit-cover"
+            height="420" />
+          <p class="position-absolute text-center color-white">Đồng Hồ Nam</p>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-4">
+        <div class="position-relative">
+          <img
+            src="http://lenos.mbkip3ms9u-e92498n216kr.p.temp-site.link/wp-content/uploads/2022/03/IMG2.png"
+            alt=""
+            class="w-100 object-fit-cover"
+            height="420" />
+          <p class="position-absolute text-center color-white">
+            Đồng Hồ Sang Trọng
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- END CATEGORY BANNER  -->
+
+  <!-- PRODUCTS  -->
+  <div class="product-area">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="section-title text-center">
+            <h4 class="text-size-6xl mb-2">Sản Phẩm Bán Chạy</h4>
+          </div>
+        </div>
+      </div>
+      <div class="row product-active">
+        <app-swiper-product></app-swiper-product>
+      </div>
+    </div>
+  </div>
+  <!-- END PRODUCTS  -->
+
+  <!-- BANNER AREA  -->
+  <div class="banner-area">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <img src="/assets/images/banner.jpg" alt="" class="w-100" />
+        </div>
+        <div class="col-lg-6">
+          <div class="banner-content-wrapper">
+            <h2>Bộ Sưu Tập Đông 2023</h2>
+            <div class="content text-size-medium">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
+              ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
+              accumsan lacus vel facilisis.
+            </div>
+            <div class="banner-btn">
+              <a href="" class="text-uppercase color-white d-inline-block"
+                >Shop The Look</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- END BANNER AREA  -->
+
+  <div class="product-tab" style="margin-bottom: 60px">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <ul class="nav product-tab-menu">
+            <li class="product-tab-item nav-item active">
+              <a class="product-tab__link active" id="nav-featured-tab" href=""
+                >Nổi Bật</a
+              >
+            </li>
+            <li class="product-tab__item nav-item">
+              <a class="product-tab__link" id="nav-new-tab" href="">Mới Nhất</a>
+            </li>
+            <li class="product-tab__item nav-item">
+              <a class="product-tab__link" id="nav-bestseller-tab" href=""
+                >Bán Chạy</a
+              >
+            </li>
+            <li class="product-tab__item nav-item">
+              <a class="product-tab__link" id="nav-onsale-tab" href=""
+                >Giảm Giá</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="tab-content">
+        <app-swiper-product [slidesPerView]="5"></app-swiper-product>
+      </div>
+    </div>
+  </div>
+</div>
