--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -33,18 +33,22 @@
               >
             </div>
             <div class="user-wrapper pe-2 me-3 position-relative">
-              <div class="card-total">2</div>
+              <div
+                class="card-total rounded-circle bg-primary-color color-white float-left text-size-xx-small position-absolute text-center text-capitalize">
+                2
+              </div>
               <a href="">
                 <span class="material-symbols-outlined"> favorite </span></a
               >
             </div>
             <div class="user-wrapper pe-2 me-3 position-relative">
-              <div class="card-total">2</div>
+              <div
+                class="card-total rounded-circle bg-primary-color color-white float-left text-size-xx-small position-absolute text-center text-capitalize">
+                2
+              </div>
               <a href="">
-                <span class="material-symbols-outlined">
-                  shopping_cart
-                </span></a
-              >
+                <span class="material-symbols-outlined"> shopping_cart </span>
+              </a>
             </div>
           </div>
         </div>
