--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-6">
           <div class="widget-footer">
-            <h6 class="title-widget">Thông tin liên hệ</h6>
+            <h6 class="title-widget mb-30 text-uppercase">Thông tin liên hệ</h6>
             <div class="footer-address mt-2">
               <div class="widget-content">
                 <p class="mb-1">
@@ -34,7 +34,7 @@
         </div>
         <div class="col-lg-2 col-md-6 col-sm-6">
           <div class="widget-footer">
-            <h6 class="title-widget">Giúp Đỡ</h6>
+            <h6 class="title-widget mb-30 text-uppercase">Giúp Đỡ</h6>
             <ul class="footer-list">
               <li><a href="">Giỏ Hàng</a></li>
               <li><a href="">Trang Chủ</a></li>
@@ -46,7 +46,7 @@
         </div>
         <div class="col-lg-2 col-md-6 col-sm-6">
           <div class="widget-footer">
-            <h6 class="title-widget">Dịch Vụ</h6>
+            <h6 class="title-widget mb-30 text-uppercase">Dịch Vụ</h6>
             <ul class="footer-list">
               <li><a href="">Cửa Hàng</a></li>
               <li><a href="">New Design 1</a></li>
@@ -58,17 +58,17 @@
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="widget-footer">
-            <h6 class="title-widget">Get the app</h6>
+            <h6 class="title-widget mb-30 text-uppercase">Get the app</h6>
             <p class="mb-3">
               GreenLife App is now available on Google Play &amp; App Store. Get
               it now.
             </p>
             <ul class="footer-list">
               <li>
-                <img src="assets/images/img-googleplay.webp" alt="" />
+                <img src="assets/images/footer/img-googleplay.webp" alt="" />
               </li>
               <li>
-                <img src="assets/images/img-appstore.webp" alt="" />
+                <img src="assets/images/footer/img-appstore.webp" alt="" />
               </li>
             </ul>
           </div>
@@ -86,7 +86,10 @@
         </div>
         <div class="col-lg-6 col-md-6">
           <div class="copy-right-image">
-            <img src="assets/images/img-payment.webp" alt="" class="mw-100" />
+            <img
+              src="assets/images/footer/img-payment.webp"
+              alt=""
+              class="mw-100" />
           </div>
         </div>
       </div>
