--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -6,4 +6,11 @@
   </main>
 
   <app-footer></app-footer>
+
+  <div
+    *ngIf="showBackToTop"
+    class="back-to-top d-flex align-items-center justify-content-center position-fixed color-white bg-primary-color"
+    (click)="scrollToTop()">
+    <span class="material-symbols-outlined"> arrow_upward </span>
+  </div>
 </div>
