--- a/src/app/components/season-collection-banner/season-collection-banner.component.html
+++ b/src/app/components/season-collection-banner/season-collection-banner.component.html
@@ -18,7 +18,7 @@
           <div class="banner-btn">
             <a
               href=""
-              class="text-uppercase color-white d-inline-block rounded-0"
+              class="text-uppercase fw-500 color-white d-inline-block rounded-0"
               >Shop The Look</a
             >
           </div>
