--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -79,7 +79,7 @@
                     class="border-0 d-block text-size-x-small font-italic w-100" />
                   <div class="subscribe-button w-100">
                     <button
-                      class="subscribe-btn text-size-x-small color-white position-absolute bg-primary-color text-center m-0 top-0 end-0 border-0">
+                      class="subscribe-btn fw-500 text-size-x-small color-white position-absolute bg-primary-color text-center m-0 top-0 end-0 border-0">
                       Đăng ký
                     </button>
                   </div>
