--- a/src/styles.scss
+++ b/src/styles.scss
@@ -80,3 +80,15 @@ h6 {
 .pb-60 {
   padding-bottom: 60px;
 }
+
+.fw-500 {
+  font-weight: 500;
+}
+
+.fw-600 {
+  font-weight: 600;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
