--- a/src/app/components/category-banner/category-banner.component.html
+++ b/src/app/components/category-banner/category-banner.component.html
@@ -8,7 +8,7 @@
           class="w-100 object-fit-cover"
           height="420" />
         <p
-          class="position-absolute text-center color-white font-play-fair text-size-4xl start-0 end-0">
+          class="position-absolute fw-500 text-center color-white font-play-fair text-size-4xl start-0 end-0">
           Đồng Hồ Nữ
         </p>
       </div>
@@ -21,7 +21,7 @@
           class="w-100 object-fit-cover"
           height="420" />
         <p
-          class="position-absolute text-center color-white font-play-fair text-size-4xl start-0 end-0">
+          class="position-absolute fw-500 text-center color-white font-play-fair text-size-4xl start-0 end-0">
           Đồng Hồ Nam
         </p>
       </div>
@@ -34,7 +34,7 @@
           class="w-100 object-fit-cover"
           height="420" />
         <p
-          class="position-absolute text-center color-white font-play-fair text-size-4xl start-0 end-0">
+          class="position-absolute fw-500 text-center color-white font-play-fair text-size-4xl start-0 end-0">
           Đồng Hồ Sang Trọng
         </p>
       </div>
