--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -2,7 +2,7 @@
 @import "text-size";
 
 .header {
-  .header-top {
+  &-top {
     border-bottom: 1px solid $gray-lighter;
 
     .logo-area {
@@ -27,16 +27,81 @@
     }
 
     .card-total {
-      font-weight: 500;
       height: 20px;
       line-height: 22px;
       width: 20px;
       top: -10px;
       right: 0px;
     }
+
+    // sub cart in menu
+    .mini-cart {
+      width: 320px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      top: 180%;
+      border-radius: 5px;
+      padding: 30px;
+      z-index: 99;
+      transition: all 0.3s ease-in-out;
+      visibility: hidden;
+      opacity: 0;
+
+      &::before {
+        content: "";
+        position: absolute;
+        right: 20px;
+        top: -7px;
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 0 6px 7px 6px;
+        border-color: transparent transparent $white transparent;
+      }
+
+      .subtotal-box {
+        border-top: 1px solid $gray-lighter;
+      }
+
+      .card-image {
+        width: 35%;
+      }
+
+      .card-title {
+        width: 60%;
+      }
+
+      .remove-from-cart {
+        top: 8px;
+      }
+
+      .cart-btns a {
+        margin-bottom: 10px;
+        background: #eef0f1;
+        border: 1px solid #e1e1e1;
+        border-radius: 5px;
+        color: $brown;
+        display: block;
+        font-size: 12px;
+        font-weight: 500;
+        height: 40px;
+        line-height: 36px;
+        padding: 0 25px;
+        text-align: center;
+        text-transform: uppercase;
+        cursor: pointer;
+      }
+    }
+
+    .cart-wrapper:hover {
+      .mini-cart {
+        visibility: visible;
+        opacity: 1;
+        top: 160%;
+      }
+    }
   }
 
-  .header-bottom {
+  &-bottom {
     border-bottom: 1px solid $gray-lighter;
 
     .main-navigation {
@@ -53,9 +118,53 @@
         display: flex;
         align-items: center;
         transition: 0.4s;
+        cursor: pointer;
 
         &:hover {
           color: $primary-color;
+        }
+      }
+
+      .category:hover {
+        .mega-menu {
+          visibility: visible;
+          opacity: 1;
+          top: 100%;
+        }
+      }
+
+      .mega-menu {
+        padding: 30px 20px;
+        text-align: left;
+        width: 640px;
+        z-index: 99;
+        top: 120%;
+        visibility: hidden;
+        opacity: 0;
+        transition: 0.3s;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+
+        & > li {
+          width: 33.333%;
+          float: left;
+          padding: 0 !important;
+          margin-right: 0px;
+        }
+
+        ul > li {
+          padding: 0;
+          color: $brown !important;
+          text-transform: capitalize;
+          display: block;
+          font-weight: 400;
+          margin-top: 8px;
+        }
+
+        & > li > a {
+          padding: 0;
+          margin-bottom: 10px;
+          padding-bottom: 5px;
+          color: $brown !important;
         }
       }
     }
