--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -24,7 +24,7 @@
       <a href="">Simple Product 001</a>
     </h4>
     <div class="price-box text-size-medium">
-      <span class="new-price">$42.00</span>
+      <span class="new-price fw-600">$42.00</span>
       <span class="old-price">$49.00</span>
     </div>
   </div>
