--- a/src/app/public/styles/_color.scss
+++ b/src/app/public/styles/_color.scss
@@ -2,6 +2,7 @@ $black: #000;
 $white: #fff;
 $gray-lighter: #d1d1d1;
 $primary-color: #c88979;
+$brown: #333;
 
 .color-black {
   color: $black;
@@ -13,6 +14,10 @@ $primary-color: #c88979;
 
 .color-white {
   color: $white;
+}
+
+.color-brown {
+  color: $brown;
 }
 
 .bg-white {
