--- a/src/app/components/category-banner/category-banner.component.html
+++ b/src/app/components/category-banner/category-banner.component.html
@@ -1,42 +1,17 @@
-<div class="category-area mt-4 overflow-hidden px-3">
-  <div class="row">
-    <div class="col-lg-4 col-md-4">
-      <div class="position-relative">
+<div class="category-area mt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-md-6">
         <img
-          src="http://lenos.mbkip3ms9u-e92498n216kr.p.temp-site.link/wp-content/uploads/2022/03/IMG.png"
+          src="https://htmldemo.net/ruiz/ruiz/assets/images/banner/banner-01.jpg"
           alt=""
-          class="w-100 object-fit-cover"
-          height="420" />
-        <p
-          class="position-absolute fw-500 text-center color-white font-play-fair text-size-4xl start-0 end-0">
-          Đồng Hồ Nữ
-        </p>
+          class="w-100 object-fit-cover" />
       </div>
-    </div>
-    <div class="col-lg-4 col-md-4">
-      <div class="position-relative">
+      <div class="col-lg-6 col-md-6">
         <img
-          src="http://lenos.mbkip3ms9u-e92498n216kr.p.temp-site.link/wp-content/uploads/2022/03/IMG1.png"
+          src="https://htmldemo.net/ruiz/ruiz/assets/images/banner/banner-02.jpg"
           alt=""
-          class="w-100 object-fit-cover"
-          height="420" />
-        <p
-          class="position-absolute fw-500 text-center color-white font-play-fair text-size-4xl start-0 end-0">
-          Đồng Hồ Nam
-        </p>
-      </div>
-    </div>
-    <div class="col-lg-4 col-md-4">
-      <div class="position-relative">
-        <img
-          src="http://lenos.mbkip3ms9u-e92498n216kr.p.temp-site.link/wp-content/uploads/2022/03/IMG2.png"
-          alt=""
-          class="w-100 object-fit-cover"
-          height="420" />
-        <p
-          class="position-absolute fw-500 text-center color-white font-play-fair text-size-4xl start-0 end-0">
-          Đồng Hồ Sang Trọng
-        </p>
+          class="w-100 object-fit-cover" />
       </div>
     </div>
   </div>
