--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="header-top py-3">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-lg-3 col-md-4 col-5">
+        <div class="col-lg-3 col-sm-4">
           <div
             class="logo-area cursor-pointer"
             (click)="router.navigate(['/']).then()">
@@ -13,7 +13,7 @@
           </div>
         </div>
 
-        <div class="col-lg-6">
+        <div class="col-lg-6 d-lg-block d-sm-none">
           <div class="search-box-wrapper position-relative d-flex">
             <input
               type="text"
@@ -27,7 +27,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-sm-8">
           <div class="d-flex justify-content-end">
             <div
               class="wishlist-wrapper pe-2 me-3 position-relative"
