--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,10 +8,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <div class="section-title text-center">
-            <h4 class="text-size-6xl mb-2 font-play-fair fw-normal">
-              Sản Phẩm Bán Chạy
-            </h4>
+          <div class="section-title">
+            <h4 class="text-size-xl">Sản phẩm bán chạy</h4>
           </div>
         </div>
       </div>
