--- a/src/app/components/season-collection-banner/season-collection-banner.component.html
+++ b/src/app/components/season-collection-banner/season-collection-banner.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="col-lg-6">
         <div class="banner-content-wrapper">
-          <h2 class="font-play-fair fw-normal text-size-6xl">
+          <h2 class="fw-normal text-size-6xl">
             Bộ Sưu Tập Đông 2023
           </h2>
           <div class="content text-size-medium">
