--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -44,7 +44,8 @@
       </div>
 
       <div class="tab-content">
-        <app-swiper-product [slidesPerView]="5"></app-swiper-product>
+        <app-swiper-product
+          [slidesPerView]="5"></app-swiper-product>
       </div>
     </div>
   </div>
