--- a/src/app/components/swiper-product/swiper-product.component.html
+++ b/src/app/components/swiper-product/swiper-product.component.html
@@ -8,12 +8,8 @@
     [virtual]="true"
     class="mySwiperProduct">
     <ng-container>
-      <ng-template
-        swiperSlide
-        *ngFor="
-          let realEstate of [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
-        ">
-        <app-product-item></app-product-item>
+      <ng-template swiperSlide *ngFor="let collection of collections">
+        <app-product-item [productItem]="collection"></app-product-item>
       </ng-template>
     </ng-container>
   </swiper>
