quick-view-product

--- a/src/app/components/header-swiper-slide/header-swiper-slide.component.scss
+++ b/src/app/components/header-swiper-slide/header-swiper-slide.component.scss
@@ -1,4 +1,5 @@
 @import "text-size";
+@import "color";
 
 .header-image-wrapper {
   height: 600px;
@@ -16,7 +17,7 @@
 .header-content {
   z-index: 3;
   top: 50%;
-  color: white;
+  color: $white;
   left: 0;
   right: 0;
   transform: translateY(-50%);
@@ -25,13 +26,13 @@
 .btn-bordered {
   line-height: 24px;
   padding: 10px 40px;
-  font-size: 15px;
+  font-size: $text-small;
   font-weight: 500;
   text-transform: uppercase;
   overflow: hidden;
   position: relative;
   z-index: 1;
   transition: all 0.3s ease 0s;
-  border-color: #fff;
-  color: #ffffff;
+  border-color: $white;
+  color: $white;
 }
