--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -81,7 +81,7 @@
         border-radius: 5px;
         color: $brown;
         display: block;
-        font-size: 12px;
+        font-size: $text-x-small;
         font-weight: 500;
         height: 40px;
         line-height: 36px;
@@ -168,5 +168,14 @@
         }
       }
     }
+  }
+
+  .menu-fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: $white;
+    z-index: 10;
   }
 }
